# valhalla

./: .gitignore  CMakeLists.txt  readme.md
cmake/: FindSDL2_image.cmake
src/: main.cpp
src/control/: game.cpp  game.h
src/visual/: animated-sprite.cpp  animated-sprite.h  globals.h  player.cpp  player.h  sprite.cpp  sprite.h  view-controller.cpp  view-controller.h  view.cpp  view.h
src/visual/characters/: player.cpp  player.h
src/visual/events/: input.cpp  input.h
src/visual/levels/: level.cpp  level.h
